docs: add documentation for get project
